--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^9.0.2",
+    "dotenv": "^16.3.1",
     "mysql2": "^3.14.0"
   },
   "devDependencies": {
