--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "concurrently": "^9.1.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.17.1",
     "jsonwebtoken": "^9.0.2",
-    "dotenv": "^16.3.1",
     "mysql2": "^3.14.0"
   },
   "devDependencies": {
